demos/multi-team/https-redirect/1_redirect_route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-filter-redirect
  namespace: single-cluster-gateway
spec:
  parentRefs:
  - name: external-http-single-cluster
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
