demos/multi-team/https-redirect/2_httproute-app-a.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: app-a-route
  namespace: app-a
spec:
  hostnames:
  - app-a.endpoints.gateway-demos.cloud.goog
  parentRefs:
  - name: external-http-single-cluster
    namespace: single-cluster-gateway
    sectionName: https
  rules:
  - backendRefs:
    - name: app-a-service-version-2
      port: 80
