demos/multi-team/https-redirect/3_httproute-app-b.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: app-b-route
  namespace: app-b
spec:
  hostnames:
  - app-b.endpoints.gateway-demos.cloud.goog
  parentRefs:
  - name: external-http-single-cluster
    namespace: single-cluster-gateway
    sectionName: https
  rules:
  - backendRefs:
    - name: app-b-service
      port: 80
